Update second time

--- a/home.html
+++ b/home.html
@@ -4,5 +4,6 @@
 <body>
 <h3>Welcome to asadullah</h3>
 <p>This is a simply project.</p>
+<p>You can learn a basic idea about git system in this tutorial</p>
 </body>
 </html>
